--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ body{
     width: 100vw;
     height: 50px;
     margin: 0;
-    padding: 20px;
+    padding: 15px;
     background-color: #272727;
 }
 
@@ -23,27 +23,46 @@ body{
 }
 
 .home img{
+    margin-top: 10px;
     margin-left: 160px;
+    padding: 10px;
+    height: 100px;
 }
 
 .nav a{
-    margin: 50px;
+    margin: 10px;
     text-decoration: none;
     color: rgb(255, 255, 255);
     padding: 20px;
+    position: relative;
 }
 
-.nav a:hover{
-    border-bottom: #ffffff 1px solid;
-    border-top: #ffffff 1px solid;
+.nav a::after{
+    content: '';
+    width: 3px;
+    height: 3px;
+    background: #c5c5c500;
+    border-radius: 5px;
+    position: absolute;
+    transition: ease-in .1s;
+    bottom: 15px;
+    right: 0;
+}
+
+.nav a:hover::after{
+    color: #c5c5c5;
+    background: #c5c5c5;
+    width: 100%;
+    transition: ease-in .5s;
 }
 
 .home .nav{
-    margin-right: 100px;
+    margin-right: 160px;
 }
 
 .nav{
-    width: 600px;
+    width: auto;
+    transition: .5s;
 }
 
 .nav button{
@@ -57,7 +76,7 @@ body{
 
 .content img{
     height: 300px;
-    width: 300px;
+    width: 290px;
     border-radius: 50%;
     margin: 100px;
     margin-right: 200px;
@@ -95,6 +114,7 @@ body{
 .about{
     margin: 100px;
     margin-left: 200px;
+    margin-right: 200px;
 }
 
 .about h1{
@@ -123,42 +143,134 @@ body{
 }
 
 .link a:hover{
-    box-shadow: #1111111c 1px 1px 5px;
+    box-shadow: #ffffff1c 1px 1px 5px;
+    box-shadow: #ffffff1c -1px -1px 5px;
     border-radius: 15px;
+    transition: .5s;
+}
+
+.tcs{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+}
+
+.cons{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+.ts{
+    width: 100%;
+    padding: 30px;
+    margin-left: 200px;
+    margin-right: 200px;
+}
+.ts h1{
+    color: #333333;
+    font-size: 30px;
+    font-weight: bold;
+    margin-left: 200px;
+}
+
+.tscon{
+    box-shadow: #1111111c 1px 1px 5px, #ffffffad -1px -1px 5px;
+    padding: 20px;
+    border-radius: 20px;
+    height: 200px;
+    margin: 20px;
+}
+
+.tscon img{
+    width: 190px;
+    height: 150px;
+    margin: auto;
+}
+
+.tscon h2{
+    color: #333333;
+    font-size: 18px;
+    font-weight: 600;
+    text-align: center;
+}
+.tcs h1{
+    color: #333333;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.cs h1{
+    color: #333333;
+    font-size: 30px;
+    font-weight: bold;
+    margin-left: 200px;
+}
+
+.conc{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.csco{
+    box-shadow: #1111111c 1px 1px 5px, #ffffffad -1px -1px 5px;
+    padding: 20px;
+    border-radius: 20px;
+    width: auto;
+    margin: 20px;
+
+}
+
+.csco h2{
+    color: #333333;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+
+.con{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-right: 100px;
+    padding-left: 100px;
+
 }
 
 .projects{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
 }
 
 .projects h1{
     color: #333333;
     font-size: 30px;
     font-weight: bold;
-    margin: 100px;
     margin-left: 200px;
 }
 
 .pcontent{
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     align-items: center;
     justify-content: center;
-    margin: 100px;
 }
 
 .pcontent label{
     color: #333333;
     font-weight: 600;
-    font-size: 30px;
+    font-size: 18px;
     text-align: center;
 }
 
 .procont{
     box-shadow: #1111111c 1px 1px 5px, #ffffffad -1px -1px 5px;
-    margin: 10px;
-    width: 400px;
-    height: 500px;
+    margin: 20px;
+    width: 330px;
+    height: 450px;
     padding: 30px;
     border-radius: 20px;
     cursor: pointer;
@@ -172,14 +284,24 @@ body{
 }
 
 .pcontent img{
+    display: block;
+    margin: auto;
+    width: 100%;
     height: 200px;
-    border-radius: 10px;
-    margin-bottom: 30px;
 }
 .pcontent h2{
-    font-size: 18px;
-    font-weight: 400;
-    color: #333333;
+    font-size: 16px;
+    font-weight: 200;
+    color: #3333338c;
+}
+
+footer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 30px;
+    background-color: #272727;
 }
 
 
@@ -332,6 +454,7 @@ body{
         align-items: center;
         flex-direction: column;
         margin: 5px;
+        
     }
     
     .pcontent label{
